<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlModificacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".ModificacionActivity">

    <EditText
        android:id="@+id/etId"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/et_id_hint"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/etNewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="159dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etNewNombre"
        android:layout_centerVertical="true"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etId"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="buscar"
        android:text="@string/btn_buscar" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="161dp"
        android:onClick="guardarM"
        android:text="@string/btn_guardar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:onClick="cancelarM"
        android:text="@string/btn_cancelar" />
</RelativeLayout>