<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnAlta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:onClick="registrar"
        android:text="@string/btn_alta" />

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:onClick="consultar"
        android:text="@string/btn_consulta" />

    <Button
        android:id="@+id/btnModifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="220dp"
        android:onClick="modificar"
        android:text="@string/btn_modifica" />

    <Button
        android:id="@+id/btnBorra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="134dp"
        android:onClick="borrar"
        android:text="@string/btn_borra" />
</RelativeLayout>