<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlAlta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".AltaActivity">

    <EditText
        android:id="@+id/etNombreA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEmailA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etNombreA"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="198dp"
        android:onClick="guardar"
        android:text="@string/btn_guardar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="138dp"
        android:onClick="cancelarAlta"
        android:text="@string/btn_cancelar" />
</RelativeLayout>